# meriadoc

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  install.sh  meriadoc.yaml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  homebrew-formula.rb
examples/: complete-project.yaml  jobs.yaml  shells.yaml  tasks.yaml
src/: main.rs
src/app/: dispatch.rs  mod.rs  output.rs
src/app/commands/: cache.rs  config.rs  doctor.rs  env.rs  info.rs  list.rs  mod.rs  run.rs  serve.rs  validate.rs
src/cli/: mod.rs  options.rs  parsers.rs  prompt.rs
src/config/: loader.rs  mod.rs  spec.rs
src/core/: mod.rs  resolver.rs
src/core/execution/: env.rs  executor.rs  interactive.rs  interpolate.rs  mod.rs
src/core/spec/: agent.rs  condition.rs  env.rs  file.rs  job.rs  mod.rs  shell.rs  task.rs
src/core/validation/: condition.rs  env.rs  error.rs  job.rs  mod.rs  project.rs  result.rs  shell.rs  task.rs
src/http/: mod.rs  server.rs  sse.rs  state.rs
src/http/handlers/: api.rs  mcp.rs  mod.rs  ui.rs
src/mcp/: handlers.rs  mod.rs  protocol.rs  server.rs  types.rs
src/repo/: cache.rs  discovery.rs  loader.rs  mod.rs  project.rs  saved_env.rs
src/ui/: app.js  index.html  style.css
tests/: execution.rs
